--- a/src/styles-reset.scss
+++ b/src/styles-reset.scss
@@ -9,12 +9,6 @@ label {
   margin-bottom: 0;
 }
 
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
 code {
   white-space: nowrap;
   border-radius: 10px;
